tests/baselines/reference/typeParametersShouldNotBeEqual2.errors.txt
tests/cases/compiler/typeParametersShouldNotBeEqual2.ts(4,5): error TS2322: Type 'U' is not assignable to type 'T'.
  'U' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Date'.
    Type 'Date' is not assignable to type 'T'.
      'Date' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Date'.
tests/cases/compiler/typeParametersShouldNotBeEqual2.ts(5,5): error TS2322: Type 'V' is not assignable to type 'T'.
  'V' could be instantiated with an arbitrary type which could be unrelated to 'T'.
tests/cases/compiler/typeParametersShouldNotBeEqual2.ts(6,5): error TS2322: Type 'T' is not assignable to type 'V'.
  'T' could be instantiated with an arbitrary type which could be unrelated to 'V'.
    Type 'Date' is not assignable to type 'V'.
      'Date' could be instantiated with an arbitrary type which could be unrelated to 'V'.
tests/cases/compiler/typeParametersShouldNotBeEqual2.ts(7,5): error TS2322: Type 'V' is not assignable to type 'U'.
  'V' could be instantiated with an arbitrary type which could be unrelated to 'U'.
tests/cases/compiler/typeParametersShouldNotBeEqual2.ts(8,5): error TS2322: Type 'U' is not assignable to type 'V'.
  'U' could be instantiated with an arbitrary type which could be unrelated to 'V'.
    Type 'Date' is not assignable to type 'V'.
      'Date' could be instantiated with an arbitrary type which could be unrelated to 'V'.
tests/cases/compiler/typeParametersShouldNotBeEqual2.ts(9,5): error TS2322: Type 'Object' is not assignable to type 'T'.
  'Object' could be instantiated with an arbitrary type which could be unrelated to 'T'.
    The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?


==== tests/cases/compiler/typeParametersShouldNotBeEqual2.ts (6 errors) ====
    function ff<T extends Date, U extends Date, V>(x: T, y: U, z: V) {
        var zz: Object;
        x = x;  // Ok
        x = y;  // Ok
        ~
!!! error TS2322: Type 'U' is not assignable to type 'T'.
!!! error TS2322:   'U' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Date'.
!!! error TS2322:     Type 'Date' is not assignable to type 'T'.
!!! error TS2322:       'Date' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Date'.
        x = z;  // Error
        ~
!!! error TS2322: Type 'V' is not assignable to type 'T'.
!!! error TS2322:   'V' could be instantiated with an arbitrary type which could be unrelated to 'T'.
        z = x;  // Error
        ~
!!! error TS2322: Type 'T' is not assignable to type 'V'.
!!! error TS2322:   'T' could be instantiated with an arbitrary type which could be unrelated to 'V'.
!!! error TS2322:     Type 'Date' is not assignable to type 'V'.
!!! error TS2322:       'Date' could be instantiated with an arbitrary type which could be unrelated to 'V'.
        y = z;  // Error
        ~
!!! error TS2322: Type 'V' is not assignable to type 'U'.
!!! error TS2322:   'V' could be instantiated with an arbitrary type which could be unrelated to 'U'.
        z = y;  // Error
        ~
!!! error TS2322: Type 'U' is not assignable to type 'V'.
!!! error TS2322:   'U' could be instantiated with an arbitrary type which could be unrelated to 'V'.
!!! error TS2322:     Type 'Date' is not assignable to type 'V'.
!!! error TS2322:       'Date' could be instantiated with an arbitrary type which could be unrelated to 'V'.
        x = zz;  // Error
        ~
!!! error TS2322: Type 'Object' is not assignable to type 'T'.
!!! error TS2322:   'Object' could be instantiated with an arbitrary type which could be unrelated to 'T'.
!!! error TS2322:     The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?
        zz = x;  // Ok
    }
    